Development
-----------

Unreleased
----------
* Add a default hash salt to settings.docker.php, overrideable using the HASH_SALT environment variable.
* Remove default setting for SIMPLETEST_DB - let it fall back to whatever connection is defined in settings.php.

1.3.0 2017-08-30
----------------
* rm -rf composer dependencies before attempting final optimized install to fix Drupal console uninstall bug. See https://github.com/hechoendrupal/drupal-console-extend-plugin/issues/2
* gitignore "-n" file from backstop container.
* Bump MySQL max allowed packet to 16mb.
* Drupal core update to 8.3.7
* Drupal console update to 1.0.1
* Update Foundation to 6.4.  This enables the flex grid by default (see style.scss for how to switch back to the float grid).
* Add configuration for Behat Drupal messaging steps.

1.2.0 2017-03-23
----------------
* Use a --base-url flag for setting the base url during tests on CircleCI.
* Move all gulp tasks to a npm module for maintainability. See https://github.com/LastCallMedia/gulp-drupal-tasks
* Update gulp configuration to a more tool-oriented syntax.  See gulpconfig.js
* Move phantomas tests to yml files instead of gulp configuration for easier visibility and reuse.
* Use configurable docroot for php docker container.
* Bring in foundation with npm and kill off bower.
* Explicitly require composer/installers to ensure drupal modules, themes, and core always get put in the right place.
* Refactor circle.yml so only the top section (environment and versions) needs to be changed for most projects.
* Use [yarn](https://yarnpkg.com/en/) instead of NPM.
* Remove the concept of a behat.local.yml

1.1.0 2017-01-09
----------------
* Use a configurable PHPCS standard
* Add pantheon deployment tasks to circle.yml
* Allow skipping bower tasks if bower is not configured.
* Added visual regression testing with BackstopJS
* Added default font stack to Scaffold theme